# Incubator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
docs/: architect.md
docs/runtime/: clock.md  error.md  file_io.md  hash_utils.md  input.md  log.md  path.md  string_utils.md  window.md
examples/: CMakeLists.txt
examples/demo/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/runtime/: CMakeLists.txt
src/runtime/core/clock/: clock.h
src/runtime/core/error/: error.cpp  error.h
src/runtime/core/log/: logger.cpp  logger.h
src/runtime/core/path/: path.cpp  path.h
src/runtime/core/utils/: hash.cpp  hash.h
src/runtime/platform/fileio/: file_handle.h  fileio.cpp  fileio.h
src/runtime/platform/input/: input.h
src/runtime/platform/window/: window.cpp  window.h
test/: CMakelists.txt
test/runtime/: CMakelists.txt  clock_test.cpp  error_test.cpp  fileio_test.cpp  hash_test.cpp  input_test.cpp  log_test.cpp  path_test.cpp  window_test.cpp
